Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-29289

uncleaned LIMIT ROWS EXAMINED

    XMLWordPrintable

Details

    Description

      Affects InnoDB, MyISAM, Aria and likely other engines

      CREATE TABLE t (c INT);
      CREATE TEMPORARY TABLE t (id INT);
      DROP TABLE t;
      SET GLOBAL general_log=ON,log_output='TABLE';
      EXPLAIN SELECT * FROM t LIMIT ROWS EXAMINED 1;
      INSERT INTO dummy SET a=0;
      

      Leads to:

      10.10.0 e1caa4bd5e8b4645944b85d4b603bf9fc9ef6ca4 (Debug)

      mysqld: /test/10.10_dbg/sql/protocol.cc:617: void Protocol::end_statement(): Assertion `0' failed.
      

      10.10.0 e1caa4bd5e8b4645944b85d4b603bf9fc9ef6ca4 (Debug)

      Core was generated by `/test/MD290722-mariadb-10.10.0-linux-x86_64-dbg/bin/mysqld --no-defaults --core'.
      Program terminated with signal SIGABRT, Aborted.
      #0  __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
      [Current thread is 1 (Thread 0x153b96147700 (LWP 4109880))]
      (gdb) bt
      #0  __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
      #1  0x0000153bbbec9859 in __GI_abort () at abort.c:79
      #2  0x0000153bbbec9729 in __assert_fail_base (fmt=0x153bbc05f588 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=0x558a73b579d9 "0", file=0x558a73980428 "/test/10.10_dbg/sql/protocol.cc", line=617, function=<optimized out>) at assert.c:92
      #3  0x0000153bbbedafd6 in __GI___assert_fail (assertion=assertion@entry=0x558a73b579d9 "0", file=file@entry=0x558a73980428 "/test/10.10_dbg/sql/protocol.cc", line=line@entry=617, function=function@entry=0x558a73980cc8 "void Protocol::end_statement()") at assert.c:101
      #4  0x0000558a72cc3a39 in Protocol::end_statement (this=0x153b380013c0) at /test/10.10_dbg/sql/protocol.cc:617
      #5  0x0000558a72dbb839 in dispatch_command (command=command@entry=COM_QUERY, thd=thd@entry=0x153b38000db8, packet=<optimized out>, packet@entry=0x153b3800b6e9 "INSERT INTO dummy SET a=0", packet_length=packet_length@entry=25, blocking=blocking@entry=true) at /test/10.10_dbg/sql/sql_parse.cc:2401
      #6  0x0000558a72dbc226 in do_command (thd=0x153b38000db8, blocking=blocking@entry=true) at /test/10.10_dbg/sql/sql_parse.cc:1407
      #7  0x0000558a72f1d744 in do_handle_one_connection (connect=<optimized out>, connect@entry=0x558a750a11b8, put_in_cache=put_in_cache@entry=true) at /test/10.10_dbg/sql/sql_connect.cc:1418
      #8  0x0000558a72f1dc4d in handle_one_connection (arg=0x558a750a11b8) at /test/10.10_dbg/sql/sql_connect.cc:1312
      #9  0x0000153bbc3da609 in start_thread (arg=<optimized out>) at pthread_create.c:477
      #10 0x0000153bbbfc6133 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
      

      Bug confirmed present in:
      MariaDB: 10.4.26 (dbg), 10.5.17 (dbg), 10.7.5 (dbg), 10.8.4 (dbg), 10.9.2 (dbg), 10.10.0 (dbg)

      Bug (or feature/syntax) confirmed not present in:
      MariaDB: 10.3.36 (dbg), 10.3.36 (opt), 10.4.26 (opt), 10.5.17 (opt), 10.6.9 (dbg), 10.6.9 (opt), 10.7.5 (opt), 10.8.4 (opt), 10.9.2 (opt), 10.10.0 (opt)
      MySQL: 5.5.62 (dbg), 5.5.62 (opt), 5.6.51 (dbg), 5.6.51 (opt), 5.7.38 (dbg), 5.7.38 (opt), 8.0.29 (dbg), 8.0.29 (opt)

      Attachments

        Issue Links

          Activity

            People

              sanja Oleksandr Byelkin
              Roel Roel Van de Paar
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:

                Time Tracking

                  Estimated:
                  Original Estimate - 0d
                  0d
                  Remaining:
                  Time Spent - 2.25h Remaining Estimate - 0.5d
                  0.5d
                  Logged:
                  Time Spent - 2.25h Remaining Estimate - 0.5d
                  2.25h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.